# exr_separator

./: CMakeLists.txt  CMakeSettings.json
exr_separator/: CMakeLists.txt  exr_separator.cpp
